# hilts

./: .dockerignore  .gitignore  Dockerfile  README.md  create_db.py  delete.py  package-lock.json  pyproject.toml  server.py
LTS/: clustering.py  config.py  fine_tune.py  labeling.py  lda.py  lts_processing.py  lts_retrain.py  main.py  main_cluster.py  preprocessing.py  random_sampling.py  requirements.txt  state_manager.py  thompson_sampling.py  utils.py
client/: index.html  package-lock.json  package.json  svelte.config.js  vite.config.ts
client/src/: App.svelte  bootstrap-custom.scss
client/src/lib/: Api.ts  CSVLoader.svelte  DashImages.svelte  Dashboard.svelte  Descriptions.js  ImageCard.svelte  LabelAll.svelte  Modal.svelte  Random.svelte  SearchText.svelte  TrainingOutput copy.svelte  TrainingOutput.svelte  stores.ts
client/src/lib/cards/: BarChart.svelte  LineChart.svelte  barChart.js  chart.js  chartSeller.js  d3Heathmap.js  d3barchart.js  heatMap.js  imagesChart.js  map.js  scattePlot.js  trainingChart.ts
data/: leather_test.csv
docker-entrypoint/: entrypoint.sh
mmdx/: LTS_manager.py  data_load.py  db.py  model.py  search.py  settings.py
results/checkpoint-1/: config.json
test/: test_vector_db.py
